package com.gft.workshop.business.model;

public enum Category {
    TOYS,
    BOOKS,
    SPORTS,
    MEAL,
    CLOTHES;
}
