package com.gft.workshop.business.model;

public enum PromotionType {
    SEASON,
    QUANTITY;
}
