@startuml
'https://plantuml.com/class-diagram'

enum Category {
  TOYS
  BOOKS
  SPORTS
  MEAL
  CLOTHES
}

enum PromotionType {
  SEASON
  QUANTITY
}

class Product {
  Long id
  String name
  String description
  BigDecimal price
  Double weight
  Category category
  boolean inCatalog
  InventoryData inventoryData
}

class InventoryData {
  int stock
  int threshold
  int totalSales
}

class History {
  String userId
  Long productId
  LocalDateTime timestamp
}

class Promotion {
  Long id
  Date startDate
  Date endDate
  Double discount
  PromotionType promotionType
}

class PromotionQuantity {
  int quantity
  Category category
}

class PromotionSeason {
  String name
  List<Category> affectedCategories
}

Product --> InventoryData
History --> Product : productId
Promotion <|-- PromotionQuantity
Promotion <|-- PromotionSeason

@enduml
